# networklab-lanagent

./: CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
debian/: changelog  control  copyright  dirs  lanagent.install  lanagent.postinst  lanagent.service
lanagent/: __init__.py  __main__.py  cli.py  monitor.py  presence.py  scanner.py
scripts/: install-systemd.sh
systemd/: lanagent.env  lanagent.service
tests/: test_scanner.py
