[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lanagent"
version = "0.1.0"
authors = [
    {name = "Dr. Mickey Lauer"},
]
description = "A network discovery service that scans local networks and exposes results via JSON API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
keywords = ["network", "discovery", "arp", "scanning", "zeroconf", "mdns", "json", "api"]
dependencies = [
    "zeroconf>=0.38.0",
    "netifaces>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/lanagent"
"Bug Reports" = "https://github.com/yourusername/lanagent/issues"
"Source Code" = "https://github.com/yourusername/lanagent"

[project.scripts]
lanagent = "lanagent.cli:main"

[tool.setuptools]
packages = ["lanagent"]

[tool.setuptools.package-data]
lanagent = ["py.typed"]